created the profile

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="title" content="Mai Nga" />
+    <meta name="title" content="Angel Agustin A." />
     <meta name="description" content="Senior Full-stack Developer" />
     <meta name="keywords" content="React Developer, Full-stack, Front-end, Top, Freelancer, engineer, Next.js, Laravel, Node.js, Django, Python" />
     <meta property="og:type" content="website" />
-    <meta name="og:title" property="og:title" content="Mai Nga" />
+    <meta name="og:title" property="og:title" content="Angel Agustin A." />
     <meta
     name="og:description"
     property="og:description"
@@ -36,7 +36,7 @@
       href="https://use.fontawesome.com/releases/v5.7.2/css/allcss"
     />
 
-    <title>Mai Nga | Senior Software Engineer</title>
+    <title>Angel Agustin A. | Senior Software Engineer</title>
   </head>
 
   <body>
@@ -84,7 +84,7 @@
                 </div>
                 <!-- avatar end -->
                 <!-- name -->
-                <h5 class="art-name mb-10">Mai Nga</h5>
+                <h5 class="art-name mb-10">Angel Agustin A.</h5>
                 <!-- post -->
                 <div class="art-sm-text">
                   Senior Software Engineer
@@ -373,7 +373,7 @@
                           <div class="art-banner-title">
                             <!-- title -->
                             <h1 class="mb-15">
-                              Mai Nga
+                              Angel Agustin A.
                             </h1>
                             <h2>Senior Software Engineer</h2>
                             <!-- suptitle -->
@@ -594,7 +594,7 @@
                           <div class="art-a art-timeline-content">
                             <div class="art-card-header">
                               <div class="art-left-side">
-                                <h5>Vietnam National University</h5>
+                                <h5>Dr. Rafael Belloso Chacín Private University</h5>
                                 <div class="art-el-suptitle mb-15">
                                   Belgrade, Vietnam
                                 </div>
@@ -606,10 +606,10 @@
                               </div>
                             </div>
                             <a href="https://eng.singidunum.ac.rs/" target="_blank">
-                            <img src="img/univ.png" style="width: 100%; margin-bottom: 10px;" alt="Vietnam National University"/>
+                            <img src="img/univ.png" style="width: 100%; margin-bottom: 10px;" alt="Dr. Rafael Belloso Chacín Private University"/>
                             </a>
                             <p>
-                              I graduated from Vietnam National University in 4 years. During that time, I had a Bachelor's degree of Science in Electric and Software Engineering. In that time, I learned about Computer Science, Software Engineering, Linux Operating System, Algorithm & Data structure, Artificial Intelligence, Database system, and so on.
+                              I graduated from Dr. Rafael Belloso Chacín Private University in 4 years. During that time, I had a Bachelor's degree of Science in Electric and Software Engineering. In that time, I learned about Computer Science, Software Engineering, Linux Operating System, Algorithm & Data structure, Artificial Intelligence, Database system, and so on.
                             </p>
                           </div>
                         </div>
@@ -1016,7 +1016,7 @@
                                 </div>
                                 <!-- text -->
                                 <div class="mb-15">
-                                  Mai Nga proved to be one of the most dedicated professionals through hers work at Wonderwave AS. Broadminded Developer/IT Manager - hers exceptional workflow, skills, imagination and understanding of change requests made the project a dream. She is extremely enthusiastic about hers infectious work.
+                                  Angel Agustin A. proved to be one of the most dedicated professionals through his work at Wonderwave AS. Broadminded Developer/IT Manager - his exceptional workflow, skills, imagination and understanding of change requests made the project a dream. She is extremely enthusiastic about his infectious work.
                                 </div>
                               </div>
                               <!-- testimonial body end -->
@@ -1054,7 +1054,7 @@
                                 </div>
                                 <!-- text -->
                                 <div class="mb-15">
-                                  It was a great pleasure working with Mai Nga. She had done a great work using the modern web technologies in a timely manner. She listens to feedback and seeks your satisfaction. She is an expert and he knows what he is doing. I strongly recommend her and hers work.
+                                  It was a great pleasure working with Angel Agustin A.. She had done a great work using the modern web technologies in a timely manner. She listens to feedback and seeks your satisfaction. She is an expert and he knows what he is doing. I strongly recommend his and his work.
                                 </div>
                               </div>
                               <!-- testimonial body end -->
@@ -1092,7 +1092,7 @@
                                 </div>
                                 <!-- text -->
                                 <div class="mb-15">
-                                  We have developed an excellent web platform with Mai Nga! She have been very quick and cooperative, and we were impressed with hers skills and expertise as a developer. She consistently demonstrated a strong understanding of the project and was able to deliver high-quality work within the specified timelines.
+                                  We have developed an excellent web platform with Angel Agustin A.! She have been very quick and cooperative, and we were impressed with his skills and expertise as a developer. She consistently demonstrated a strong understanding of the project and was able to deliver high-quality work within the specified timelines.
                                 </div>
                               </div>
                               <!-- testimonial body end -->
@@ -1130,7 +1130,7 @@
                                 </div>
                                 <!-- text -->
                                 <div class="mb-15">
-                                  A+. Top of the game. Fast delivery. Clear communication. She is one of the best senior developers I have ever worked it. It has been a blessing working with her, and I will work continue work with her now and in future. She has my best wishes.
+                                  A+. Top of the game. Fast delivery. Clear communication. She is one of the best senior developers I have ever worked it. It has been a blessing working with his, and I will work continue work with his now and in future. She has my best wishes.
                                 </div>
                               </div>
                               <!-- testimonial body end -->
@@ -1235,7 +1235,7 @@
         <!-- preloader content -->
         <div class="art-preloader-content">
           <!-- title -->
-          <h4>Mai Nga</h4>
+          <h4>Angel Agustin A.</h4>
           <!-- progressbar -->
           <div id="preloader" class="art-preloader-load"></div>
         </div>
