created my portfolio

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   <div class="art-lang-skills-item">
                     <div id="circleprog1" class="art-cirkle-progress"></div>
                     <!-- title -->
-                    <h6>Vietnamn</h6>
+                    <h6>Venezuela</h6>
                   </div>
                   <!-- skill end -->
 
