created my portfolio --- 2

--- a/index.html
+++ b/index.html
@@ -101,13 +101,10 @@
                     <!-- country -->
                     <li>
                       <h6>Residence:</h6>
-                      <span>Vietnam</span>
+                      <span>Venezuela</span>
                     </li>
                     <!-- city -->
-                    <li>
-                      <h6>City:</h6>
-                      <span>Ho Chi Minh City</span>
-                    </li>
+
                     <li>
                       <h6>Address:</h6>
                       <span>Di An</span>
@@ -596,7 +593,7 @@
                               <div class="art-left-side">
                                 <h5>Dr. Rafael Belloso Chacín Private University</h5>
                                 <div class="art-el-suptitle mb-15">
-                                  Belgrade, Vietnam
+                                  Belgrade, Venezuela
                                 </div>
                               </div>
                               <div class="art-right-side">
